# logparser

./: Cargo.toml  LICENSE  README.md
docs/: sample_config.yaml
logs/: log.txt
src/: main.rs
src/decompressors/: decompress.rs
src/parser_config/: mod.rs  parser_config.rs
src/parsers/: log_parser.rs
