[package]
name = "logparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Apache-2.0 / MIT
glob = "0.3.1"
# Apache-2.0 / MIT
regex = "1.9.1"
# Apache-2.0 / MIT
chrono = "0.4.26"
# Apache-2.0 / MIT
serde = { version = "1.0.175", features = ["derive"] }
# Apache-2.0 / MIT
clap = {version = "4.3.19", features = ["derive"]}
# Apache-2.0 / MIT
serde_yaml = "0.9.25"
# Apache-2.0 / MIT
serde_json = "1.0.104"
# Apache-2.0 / MIT
flexi_logger = "0.25.6"
# Apache-2.0 / MIT
log = "0.4"
# Apache-2.0 / MIT
flate2 = "1.0.26"
